tests/miniJava/neg/004186_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java extends static java { }
